# elyra-framework

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  elyra.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
ai/: Cargo.toml
ai/src/: agent.rs  anthropic.rs  audio.rs  chat.rs  client.rs  embeddings.rs  error.rs  image.rs  lib.rs  message.rs  openai.rs  provider.rs  provider_tool.rs  request.rs  response.rs  stream.rs  subagent.rs  tool.rs  vector.rs
ai/tests/: live.rs  sdk.rs
database/: Cargo.toml
database/src/: error.rs  lib.rs  migrate.rs  model.rs
database/tests/: migrate.rs
docs/: README.md  about.md  ai.md  architecture.md  autostart.md  cache.md  cli.md  codegen.md  commands.md  components.md  configuration.md  container-and-providers.md  database.md  events.md  frontend-runtime.md  getting-started.md  menu.md  middleware.md  migrations.md  models.md  queue.md  roadmap.md  shortcuts.md  sidecar.md  single-instance.md  storage.md  store.md  substrate.md  system.md  tray.md  updater.md  windows.md  wire-format.md
example/: Cargo.toml
example/app/: index.html  package-lock.json  package.json  vite.config.js
example/app/src/: App.svelte  bindings.ts  main.js
example/migrations/: 0001_create_todos.sql
example/src/: main.rs
framework/: Cargo.toml
framework/src/: about.rs  ai.rs  app.rs  assets.rs  autostart.rs  cache.rs  codegen.rs  command.rs  container.rs  deeplink.rs  error.rs  event.rs  fallback.html  instance.rs  lib.rs  menu.rs  middleware.rs  provider.rs  queue.rs  shell.rs  sidecar.rs  storage.rs  store.rs  system.rs  tray.rs  updater.rs  window.rs  winstate.rs
framework/tests/: about.rs  codegen.rs  events.rs  m3.rs  model.rs  model_servers.rs  relations.rs  substrate.rs  wire.rs
macros/: Cargo.toml
macros/src/: lib.rs
ratatosk/: Cargo.toml
ratatosk/src/: bundle.rs  config.rs  main.rs  migrate.rs  scaffold.rs
runtime/: package-lock.json  package.json
runtime/src/: index.ts
substrate/: Cargo.toml
substrate/src/: lib.rs
