[workspace]
resolver = "2"
members = ["framework", "macros", "ratatosk", "database", "example"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kwhorne/elyra-framework"
rust-version = "1.80"

[workspace.dependencies]
# Shell — pinned on minor (both pre-1.0, wry breaks protocol API most minors).
tao = "0.35"
wry = "0.55"

# Wire format. See docs/wire-format.md for the to_vec_named vs to_vec decision.
rmp-serde = "1.3"
rmp = "0.8"
serde = { version = "1", features = ["derive"] }

# Async runtime.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Type export (M2 codegen). rc releases break between each other -> exact pin.
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
specta-typescript = "0.0.12"
# serde-aware export: reflects rename_all / tagged enums / flatten / skip.
specta-serde = "0.0.12"

# Embedded assets.
rust-embed = "8"

# Database drivers (SQLite / MySQL / Postgres via the Any driver).
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "any",
    "sqlite",
    "mysql",
    "postgres",
] }

# Errors.
thiserror = "2"

# System tray (tao dropped its built-in tray in 0.35).
tray-icon = "0.24"

# Auto-updater: signature verification, version compare, manifest, fetch.
ed25519-dalek = "3"
semver = "1"
base64 = "0.22"
serde_json = "1"
ureq = "3"

# Internal crates.
elyra = { path = "framework" }
elyra-macros = { path = "macros" }
elyra-db = { path = "database" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
