[package]
name = "elyra-example"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "elyra-example"
path = "src/main.rs"

[dependencies]
elyra = { workspace = true, features = [
    "database",
    "tray",
    "updater",
    "system",
    "shortcuts",
    "autostart",
] }
serde = { workspace = true }
tokio = { workspace = true }
specta = { workspace = true }
rust-embed = { workspace = true }
