[package]
name = "elyra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A Rust + Svelte 5 framework for hyper-responsive desktop apps. Laravel-inspired, compiled, binary."

[features]
default = []
# Database drivers + migrations (pulls in sqlx via elyra-db).
database = ["dep:elyra-db"]
# AI SDK (agents, tools, structured output, images, embeddings) via elyra-ai.
ai = ["dep:elyra-ai"]
# System tray icon + menu.
tray = ["dep:tray-icon"]
# Auto-updater (ed25519-verified).
updater = ["dep:ed25519-dalek", "dep:semver", "dep:base64", "dep:ureq"]
# Native system integration: dialogs, shell-open, clipboard, notifications, paths.
system = ["dep:rfd", "dep:open", "dep:arboard", "dep:notify-rust", "dep:dirs"]
# OS-level global keyboard shortcuts.
shortcuts = ["dep:global-hotkey"]
# Launch the app at login.
autostart = ["dep:auto-launch"]
# Spawn + manage sidecar child processes (no extra crate; enables tokio bits).
sidecar = ["tokio/process", "tokio/io-util"]

[dependencies]
elyra-db = { workspace = true, optional = true }
elyra-ai = { workspace = true, optional = true }
tray-icon = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
semver = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
serde_json = { workspace = true }
substrate-core = { workspace = true }
ureq = { workspace = true, optional = true }
rfd = { workspace = true, optional = true }
open = { workspace = true, optional = true }
arboard = { workspace = true, optional = true }
notify-rust = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
global-hotkey = { workspace = true, optional = true }
auto-launch = { workspace = true, optional = true }
parking_lot = { workspace = true }
elyra-macros = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
rmp = { workspace = true }
tao = { workspace = true }
wry = { workspace = true }
tokio = { workspace = true }
rust-embed = { workspace = true }
thiserror = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }
specta-serde = { workspace = true }

# Native macOS application menu so ⌘C/⌘V/⌘X reach the webview.
[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.19"

[dev-dependencies]
tokio = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
specta = { workspace = true }
